file(GLOB_RECURSE srcs *.cpp)
foreach(src ${srcs})
  file(RELATIVE_PATH test_name ${CMAKE_CURRENT_LIST_DIR} ${src})
  string(REPLACE "/" "_" test_name ${test_name})
  get_filename_component(test_name ${test_name} NAME_WLE)
  add_executable(${test_name} ${src})
  add_test(${test_name} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test_name})
endforeach()